--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ footer {
 
 .jumbotron {
   padding: 30px;
+  margin: 0;
   color: white;
   background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b);
 }
@@ -31,4 +32,9 @@ footer {
   padding: 50px 0;
   border-bottom: 1px ridge;
   min-height: 200px;
+}
+
+
+.navbar {
+  background-color: #901CAD;
 }
