--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ header h2 {
 
 .row-content {
   padding: 50px 0;
-  border-bottom: 1px ridge;  
+  border-bottom: 1px ridge;
   min-height: 200px;
 }
 
@@ -39,3 +39,9 @@ header h2 {
   background-color: #901CAD;
 }
 
+
+.tab-content {
+  border: 1px solid #DDD;
+  border-top: none;
+  padding: 10px;
+}
