--- a/css/styles.css
+++ b/css/styles.css
@@ -1,70 +1,51 @@
 body {
-    font-family: 'Open Sans', sans-serif;
-}
+  font-family: "Open Sans", sans-serif; }
 
 h1,
 h2,
 h3 {
-    font-family: 'Lobster', cursive;
-}
+  font-family: "Lobster", cursive; }
 
 h2 {
-    color: #3046c5;
-}
+  color: #3046c5; }
 
 header h2 {
-    color: #cec8ff;
-}
+  color: #cec8ff; }
 
 .site-footer {
-    background-image: linear-gradient(#cec8ff, white);
-    padding: 20px 0;
-}
+  background-image: linear-gradient(#cec8ff, white);
+  padding: 20px 0; }
 
 .jumbotron {
-    padding: 30px;
-    margin: 0;
-    color: white;
-    background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b);
-}
+  padding: 30px;
+  margin: 0;
+  color: white;
+  background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b); }
 
 .row-content {
-    padding: 50px 0;
-    border-bottom: 1px ridge;
-    min-height: 200px;
-}
+  padding: 50px 0;
+  border-bottom: 1px ridge;
+  min-height: 200px; }
 
 .navbar {
-    background-color: #901cad;
-}
-
-/* 
-.tab-content {
-  border: 1px solid #DDD;
-  border-top: none;
-  padding: 10px;
-} */
+  background-color: #901cad; }
 
 a,
 a:hover {
-    color: inherit;
-    text-decoration: none;
-    cursor: pointer;
-}
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer; }
 
 .carousel-caption {
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    padding: 0.5rem;
-}
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  padding: 0.5rem; }
 
 .carousel {
-    border: solid #5637dd;
-}
+  border: solid #5637dd; }
 
 #carouselButton {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: 100;
-}
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 100; }
