--- a/css/styles.css
+++ b/css/styles.css
@@ -49,3 +49,13 @@ a:hover {
   right: 0;
   bottom: 0;
   z-index: 100; }
+
+#reserveModal .modal-header {
+  background-color: #17a2b8; }
+  #reserveModal .modal-header .modal-title {
+    color: white; }
+
+#loginModal .modal-header {
+  background-color: #901cad; }
+  #loginModal .modal-header .modal-title {
+    color: white; }
